Fix scrollbars showing on Windows

--- a/src/styles/MainWeekView.css
+++ b/src/styles/MainWeekView.css
@@ -3,12 +3,23 @@
     height: 100%;
 }
 
+.main::-webkit-scrollbar {
+    visibility: visible;
+    width: initial;
+    height: initial;
+  }
+
+.gridbox::-webkit-scrollbar {
+    display: scroll;
+  }
+
 .mainweekview {
     display: flex;
     flex-direction: row;
     flex-grow: 1;
     flex-basis: auto;
     overflow-x: auto;
+    overflow-y: auto;
     width: auto;
     min-width: 100%;
     min-height: 100%;
