--- a/src/styles/MenuBar.css
+++ b/src/styles/MenuBar.css
@@ -9,7 +9,7 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    overflow-x: scroll;
+    overflow-x: hidden;
 }
 
 button, .btn{
